# deepflame-dev

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  Allwclean  Allwmake  CMakeLists.txt  README.md  bashrc.in  configure.sh  install.sh  pyproject.toml
applications/solvers/dfHighSpeedFoam/: CMakeLists.txt  calculateR.H  centralCourantNo.H  createFields.H  createFields_rk2.H  dfHighSpeedFoam.C  phiCal.H  preCal.H  rhoEEqn.H  rhoEqn.H  rhoUEqn.H  rhoYEqn.H
applications/solvers/dfHighSpeedFoam/Make/: options
applications/solvers/dfSprayFoam/: CMakeLists.txt  EEqn.H  YEqn.H  createFields.H  dfSprayFoam.C  pEqn.H
applications/solvers/dfSprayFoam/Make/: options
src/TurbulenceModels/compressible/: CMakeLists.txt
src/TurbulenceModels/compressible/Make/: files  options
src/TurbulenceModels/turbulenceModels/: CMakeLists.txt
src/TurbulenceModels/turbulenceModels/Make/: files  options
src/dfCanteraMixture/: CMakeLists.txt  CanteraMixture.C  CanteraMixture.H  makeThermos.C
src/dfCanteraMixture/Make/: options
src/dfChemistryModel/: CMakeLists.txt  dfChemistryModel.C  dfChemistryModel.H  dfChemistryModelWaiting.C  dfChemistryModelWaiting.H  libtorchFunctions.H  pytorchFunctions.H  torchFunctions.H
src/dfChemistryModel/DNNInferencer/: CMakeLists.txt  DNNInferencer.cpp
src/dfChemistryModel/GpuInference/: DynamicBuffer.C  DynamicBuffer.H
src/dfChemistryModel/Make/: options
src/dfChemistryModel/loadBalancing/: ChemistryLoad.H  ChemistryProblem.C  ChemistryProblem.H  ChemistrySolution.C  ChemistrySolution.H  LoadBalancer.C  LoadBalancer.H  LoadBalancerBase.C  LoadBalancerBase.H
src/dfCombustionModels/: CMakeLists.txt
src/dfCombustionModels/FGM/DeePFGM/: DeePFGM.C  DeePFGM.H  DeePFGMs.C  GpuFGMProblem.H  GpuFGMSolution.H
src/dfCombustionModels/FGM/DeePFGM/FGMinference/: inference.py
src/dfCombustionModels/FGM/DeePFGM/FGMinference/networks-2D/: model_res_T.pth  model_res_cp.pth
src/dfCombustionModels/FGM/FGMLiquidEvaporationBoil/: FGMLiquidEvaporationBoil.C  FGMLiquidEvaporationBoil.H  FGMLiquidEvaporationBoils.C
src/dfCombustionModels/FGM/baseFGM/: baseFGM.C  baseFGM.H  baseFGMs.C
src/dfCombustionModels/FGM/flameletTableSolver/: readThermChemTables.H  tableSolver.C  tableSolver.H
src/dfCombustionModels/FGM/flareFGM/: README.md  flareFGM.C  flareFGM.H  flareFGMs.C
src/dfCombustionModels/Make/: files  options
src/dfCombustionModels/PaSR/: PaSR.C  PaSR.H
src/dfCombustionModels/laminar/: laminar.C
src/dfMatrix/solver/amgx/: CMakeLists.txt
src/dfMatrix/solver/amgx/foam2csr/: AmgXCSRMatrix.H  AmgXCSRMatrix.cu  AmgXMPIComms.cu  AmgXSolver.H  AmgXSolver.cu  CMakeLists.txt
src/dynamicFvMesh/: CMakeLists.txt
src/dynamicFvMesh/Make/: files  options
src/dynamicFvMesh/dfDynamicRefineFvMesh/: dfDynamicRefineFvMesh.H  dynamicMeshDict
src/dynamicFvMesh/dfRefinementHistoryConstraint/: dfRefinementHistoryConstraint.H
src/dynamicFvMesh/dynamicRefineFvMeshNew/: dynamicMeshDict  dynamicRefineFvMeshNew.C  dynamicRefineFvMeshNew.H
src/dynamicFvMesh/refinementHistoryNewConstraint/: refinementHistoryNewConstraint.C  refinementHistoryNewConstraint.H
src/dynamicMesh/: CMakeLists.txt
src/dynamicMesh/Make/: files  options
src/dynamicMesh/polyTopoChange/polyTopoChange/hexRef/: dfRefinementHistory.H  hexRef.C  hexRef.H  hexRefData.C  hexRefData.H  hexRefNew.C  refinementHistory.C  refinementHistoryNew.C  refinementHistoryNew.H
src/dynamicMesh/polyTopoChange/polyTopoChange/hexRef/hexRef2/: hexRef2.C  hexRef2.H
src/dynamicMesh/polyTopoChange/polyTopoChange/hexRef/hexRef4/: hexRef4.C  hexRef4.H
src/functionObjects/field/: CMakeLists.txt
src/functionObjects/field/Make/: files  options
src/lagrangian/spray/: CMakeLists.txt
src/lagrangian/spray/Make/: options
src/lagrangian/turbulence/: CMakeLists.txt
src/lagrangian/turbulence/Make/: options
src/regionModels/surfaceFilmModels/: CMakeLists.txt
src/regionModels/surfaceFilmModels/Make/: options
src/thermophysicalModels/SLGThermo/: CMakeLists.txt
src/thermophysicalModels/SLGThermo/Make/: options
src/thermophysicalModels/basic/: CMakeLists.txt
src/thermophysicalModels/basic/Make/: options
src/thermophysicalModels/thermophysicalProperties/: CMakeLists.txt
src/thermophysicalModels/thermophysicalProperties/Make/: options
src_gpu/: AmgXSolver.H  AmgXSolver.cu  CMakeLists.txt  GPUMesh.H  GPUfield.H  GPUfield.cpp  dfChemistrySolver.H  dfChemistrySolver.cu  dfEEqn.H  dfEEqn.cu  dfMatrix.H  dfMatrix.cu  dfMatrixDataBase.H  dfMatrixDataBase.cpp  dfMatrixDataBase.cu  dfMatrixOpBase.H  dfMatrixOpBase.cu  dfNcclBase.H  dfNcclBase.cu  dfRhoEqn.H  dfRhoEqn.cu  dfThermo.H  dfThermo.cu  dfUEqn.H  dfUEqn.cu  dfYEqn.H  dfYEqn.cu  dfpEqn.H  dfpEqn.cu  ueqn.cu
src_gpu/dfChemistrySolver/: Layer.H  Layer.cu  dfChemistrySolver_cublas.H  dfChemistrySolver_cublas.cu
src_gpu_orig/: AmgXSolver.cu  CMakeLists.txt  dfEEqn.cu  dfMatrixDataBaseOrig.H  dfMatrixDataBaseOrig.cu  dfMatrixOpBaseOrig.H  dfMatrixOpBaseOrig.cu  dfRhoEqn.H
test/: CMakeLists.txt  corrtest.cpp  df0DFoam  testLoopReport
test/Tu500K-Phi1/: Allclean  Allrun  inference.py
test/Tu500K-Phi1/constant/: CanteraTorchProperties
test/Tu500K-Phi1/system/: controlDict
test/aachenBomb_2D/: Allclean  Allrun
test/aachenBomb_2D/0/: N2  O2  T  U  Ydefault  alphat  epsilon  k  nut  p
test/aachenBomb_2D/constant/: CanteraTorchProperties  sprayCloudProperties
test/aachenBomb_2D/system/: blockMeshDict  controlDict  decomposeParDict  sample
test/df0DFoam/: Allclean  ES80_H2-7-16.yaml  pytorchDNN
test/df0DFoam/constant/: CanteraTorchProperties
test/dfHighSpeedFoam/oneD_detonationH2/: Allrun
test/dfHighSpeedFoam/oneD_detonationH2/constant/: CanteraTorchProperties
test/dfHighSpeedFoam/oneD_detonationH2/system/: decomposeParDict
test/dfLowMachFoam/: 2DSandiaD_flareFGM  twoD_SandiaD_flareFGM
test/dfLowMachFoam/twoD_reactingTGV/H2/cvodeSolver/: Allclean  Allrun
test/pytorchIntegrator/: Allrun
test/pytorchIntegrator/constant/: CanteraTorchProperties
test/pytorchIntegrator/system/: controlDict  decomposeParDict
(+571 files in other folders)
